--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-	"editor.tabCompletion": "off"
+	"editor.tabCompletion": "off",
+	"42header.username": "irmoreno",
+	"42header.email": "irmoreno@student.42malaga.com"
 }
